# 4E993349-6140-445B-85E0-3A1D0F6DA3E2

./: C++.md  CMakeLists.txt  InspireNote.md  J 剪贴板内容变化_烟花爆炸效果.py  Prompt.md  Quick_Window.py  TUTORIAL.md  extract_code.py  test_cmake.txt  旧版本_Python编程语言版.md
X 修复备份/: implementation_plan.md  implementation_plan.md.resolved.1  implementation_plan.md.resolved.6  task.md.resolved.1  task.md.resolved.10  task.md.resolved.14  task.md.resolved.15  task.md.resolved.16  task.md.resolved.18  task.md.resolved.5  task.md.resolved.6  task.md.resolved.8  task.md.resolved.9  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved  walkthrough.md.resolved.0  walkthrough.md.resolved.3  walkthrough.md.resolved.4  walkthrough.md.resolved.5  walkthrough.md.resolved.7
X 修复记录/: implementation_plan.md.metadata.json  implementation_plan.md.resolved  implementation_plan.md.resolved.0  implementation_plan.md.resolved.10  implementation_plan.md.resolved.2  implementation_plan.md.resolved.3  implementation_plan.md.resolved.4  implementation_plan.md.resolved.5  implementation_plan.md.resolved.7  implementation_plan.md.resolved.8  implementation_plan.md.resolved.9  task.md.metadata.json  task.md.resolved  task.md.resolved.0  task.md.resolved.11  task.md.resolved.12  task.md.resolved.13  task.md.resolved.17  task.md.resolved.2  task.md.resolved.3  task.md.resolved.4  task.md.resolved.7  walkthrough.md.resolved.1  walkthrough.md.resolved.2  walkthrough.md.resolved.6  walkthrough.md.resolved.8  walkthrough.md.resolved.9
resources/: resources.qrc
resources/qss/: dark_style.qss
src/: main.cpp
src/_backup_20260201_194851/: ColorPickerWindow.cpp.bak
src/_backup_20260201_200443/: ColorPickerWindow.cpp.bak  ColorPickerWindow.cpp.bak.bak
src/core/: AES.cpp  AES.h  ClipboardMonitor.cpp  ClipboardMonitor.h  DatabaseManager.cpp  DatabaseManager.h  ExplorerHelper.cpp  ExplorerHelper.h  FileCryptoHelper.cpp  FileCryptoHelper.h  HotkeyManager.cpp  HotkeyManager.h  KeyboardHook.cpp  KeyboardHook.h  OCRManager.cpp  OCRManager.h  Utils.h
src/models/: CategoryModel.cpp  CategoryModel.h  NoteModel.cpp  NoteModel.h
src/ui/: AdvancedTagSelector.cpp  AdvancedTagSelector.h  CategoryDelegate.h  CategoryLockWidget.cpp  CategoryLockWidget.h  CategoryPasswordDialog.cpp  CategoryPasswordDialog.h  ColorPickerWindow.cpp  ColorPickerWindow.h  DatabaseLockDialog.cpp  DatabaseLockWidget.cpp  DatabaseLockWidget.h  DropTreeView.cpp  DropTreeView.h  Editor.cpp  Editor.h  FileSearchWindow.cpp  FileSearchWindow.h  FileStorageWindow.cpp  FileStorageWindow.h  FilterPanel.cpp  FilterPanel.h  FireworksOverlay.cpp  FireworksOverlay.h  FloatingBall.cpp  FloatingBall.h  FlowLayout.cpp  FlowLayout.h  FramelessDialog.cpp  FramelessDialog.h  GraphWidget.cpp  GraphWidget.h  HeaderBar.cpp  HeaderBar.h  IconHelper.h  KeywordSearchWindow.cpp  KeywordSearchWindow.h  MainWindow.cpp  MainWindow.h  MetadataPanel.cpp  (+35 more)
